[gd_scene load_steps=36 format=3 uid="uid://rs65ur780i7r"]

[ext_resource type="Script" path="res://Scripts/MasterTank.gd" id="1_d6udm"]
[ext_resource type="Texture2D" uid="uid://nc5m8611ei02" path="res://Graphics/models/TankTracksWideV2.png" id="2_1be7q"]
[ext_resource type="AudioStream" uid="uid://bf3bvthesjttb" path="res://Sounds/Arcade_BitExplosion2.wav" id="2_24dvm"]
[ext_resource type="Texture2D" uid="uid://cp0spo6ya1puj" path="res://Graphics/Effects/HolyEffects/Holy VFX 01/Holy VFX 01 Impact.png" id="2_atnw4"]
[ext_resource type="PackedScene" uid="uid://dgxd31oalsxu5" path="res://Scenes/StatusBar.tscn" id="2_k3uo6"]
[ext_resource type="Material" uid="uid://dqswdkjt0rmab" path="res://ParticleProcessorMaterials/TankTrackProcessor.tres" id="2_y7hh6"]
[ext_resource type="AudioStream" uid="uid://b5goeg108wmah" path="res://Sounds/Real_Shot.wav" id="3_6o328"]
[ext_resource type="AudioStream" uid="uid://bqhx1f46pbbkv" path="res://Sounds/Arcade_Death.wav" id="3_tklmg"]
[ext_resource type="Script" path="res://Scripts/TankTracks.gd" id="3_tvlc4"]
[ext_resource type="AudioStream" uid="uid://bl4r8m82yjax1" path="res://Sounds/Real_MetalKlank.wav" id="5_1wjfc"]
[ext_resource type="Shader" path="res://Shader/HueCircling.gdshader" id="5_2hrtp"]
[ext_resource type="Texture2D" uid="uid://l6fuke78nwok" path="res://Graphics/models/T_Yellow_Wide.png" id="5_fhye8"]
[ext_resource type="Script" path="res://Scripts/BulletTracer.gd" id="6_2shuy"]
[ext_resource type="Texture2D" uid="uid://bk12ivopnueyd" path="res://Graphics/Collections/DuskIcons/Dusk_Icons_x24.png" id="7_5ges6"]
[ext_resource type="Script" path="res://Scripts/Crosshair.gd" id="7_sk5y0"]
[ext_resource type="PackedScene" uid="uid://bvv1o1aml57et" path="res://Scenes/AnimationHandler.tscn" id="7_wp5jp"]
[ext_resource type="Texture2D" uid="uid://pewqboqp0q8x" path="res://Graphics/models/Shield/Shield_1.png" id="10_v060q"]
[ext_resource type="Texture2D" uid="uid://dehhpf7qbnxm" path="res://Graphics/models/Shield/Shield_2.png" id="11_1msvx"]
[ext_resource type="Texture2D" uid="uid://ct600eeqmwvty" path="res://Graphics/models/Shield/Shield_3.png" id="12_066hs"]
[ext_resource type="Texture2D" uid="uid://cdp1afmqupf42" path="res://Graphics/models/Shield/Shield_4.png" id="13_kd0n8"]
[ext_resource type="Texture2D" uid="uid://b8gyam7sim1hm" path="res://Graphics/models/Shield/Shield_5.png" id="14_0algq"]
[ext_resource type="Texture2D" uid="uid://be0folyca4kpq" path="res://Graphics/models/Shield/Shield_6.png" id="15_p58e6"]
[ext_resource type="Texture2D" uid="uid://cyq8kfmag7or8" path="res://Graphics/models/Shield/Shield_7.png" id="16_ikq21"]
[ext_resource type="Texture2D" uid="uid://b7ymup5mbryhi" path="res://Graphics/Effects/light.png" id="24_7etbd"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cpig3"]
shader = ExtResource("5_2hrtp")
shader_parameter/Shift_Hue = null

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwn2y"]
size = Vector2(403.333, 320)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpqmw"]
atlas = ExtResource("2_atnw4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0hje"]
atlas = ExtResource("2_atnw4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flgcn"]
atlas = ExtResource("2_atnw4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6h617"]
atlas = ExtResource("2_atnw4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx7a"]
atlas = ExtResource("2_atnw4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dhsi"]
atlas = ExtResource("2_atnw4")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sny2n"]
atlas = ExtResource("2_atnw4")
region = Rect2(192, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a5qjl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpqmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0hje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flgcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6h617")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dhsi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sny2n")
}],
"loop": false,
"name": &"muzzleFire",
"speed": 30.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_mck0e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_v060q")
}, {
"duration": 1.0,
"texture": ExtResource("11_1msvx")
}, {
"duration": 1.0,
"texture": ExtResource("12_066hs")
}, {
"duration": 1.0,
"texture": ExtResource("13_kd0n8")
}, {
"duration": 1.0,
"texture": ExtResource("14_0algq")
}, {
"duration": 1.0,
"texture": ExtResource("15_p58e6")
}, {
"duration": 1.0,
"texture": ExtResource("16_ikq21")
}],
"loop": true,
"name": &"Shield",
"speed": 15.0
}]

[node name="MasterTank" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
collision_layer = 2
collision_mask = 63
safe_margin = 0.001
script = ExtResource("1_d6udm")
rotationSpeed = 5.0
shotDelay = 2.0
startHealth = 3
dashDelay = 2.0
fwKey = "P1_Forward"
bwKey = "P1_Backward"
rtlKey = "P1_RotateLeft"
rtrKey = "P1_RotateRight"
shootKey = "P1_Shoot"
dashKey = "P1_Dash"

[node name="TankTracks" type="GPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(-176, 0)
amount = 20
process_material = ExtResource("2_y7hh6")
texture = ExtResource("2_1be7q")
lifetime = 3.0
trail_lifetime = 5.0
trail_sections = 10
script = ExtResource("3_tvlc4")

[node name="Body" type="Sprite2D" parent="."]
z_index = 1
material = SubResource("ShaderMaterial_cpig3")
texture = ExtResource("5_fhye8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-40, 0)
shape = SubResource("RectangleShape2D_gwn2y")

[node name="Canon" type="Sprite2D" parent="."]

[node name="BulletSpawnPoint" type="Marker2D" parent="Canon"]
position = Vector2(236.667, 0)

[node name="RayCast2D" type="RayCast2D" parent="Canon/BulletSpawnPoint"]
target_position = Vector2(25000, 0)
collision_mask = 31
collide_with_areas = true

[node name="BulletTrace" type="Line2D" parent="Canon/BulletSpawnPoint/RayCast2D"]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 20.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("6_2shuy")

[node name="Crosshair" type="Sprite2D" parent="Canon/BulletSpawnPoint/RayCast2D"]
visible = false
position = Vector2(123.333, 0)
scale = Vector2(10, 10)
texture = ExtResource("7_5ges6")
region_enabled = true
region_rect = Rect2(290, 242, 20, 20)
script = ExtResource("7_sk5y0")

[node name="MuzzleFire" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
scale = Vector2(10, 10)
sprite_frames = SubResource("SpriteFrames_a5qjl")
animation = &"muzzleFire"

[node name="Shield" type="AnimatedSprite2D" parent="."]
visible = false
z_index = 1
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_mck0e")
animation = &"Shield"
autoplay = "Shield"
frame_progress = 0.16931
flip_h = true

[node name="AnimationHandler" parent="." instance=ExtResource("7_wp5jp")]
visible = false

[node name="DungeonLight" type="PointLight2D" parent="."]
visible = false
scale = Vector2(4.41406, 4.41406)
energy = 0.5
shadow_enabled = true
texture = ExtResource("24_7etbd")
texture_scale = 5.0

[node name="GeneralLight" type="PointLight2D" parent="."]
visible = false
scale = Vector2(4.41406, 4.41406)
energy = 0.6
texture = ExtResource("24_7etbd")
texture_scale = 5.0

[node name="ShotTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpeedUpTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SlowDownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FreezeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ReverseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RapidFireTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MiniTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="UltiTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sound_BulletShot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_24dvm")
volume_db = 10.124
attenuation = 1.51572
bus = &"SFX"

[node name="Sound_BulletKlink" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6o328")
volume_db = 7.436
attenuation = 1.51572
bus = &"SFX"

[node name="Sound_Death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tklmg")
volume_db = 12.885
attenuation = 2.54912
bus = &"SFX"

[node name="Sound_Hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_1wjfc")
volume_db = 11.044
attenuation = 2.54912
bus = &"SFX"

[node name="StatusBar" parent="." instance=ExtResource("2_k3uo6")]
visible = false
position = Vector2(0, 0)

[connection signal="healthChange" from="." to="." method="_on_health_change"]
[connection signal="playerDied" from="." to="." method="_on_player_died"]
[connection signal="animation_finished" from="AnimationHandler" to="." method="_on_animation_handler_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_hurt_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_speed_up_timer_timeout"]
[connection signal="timeout" from="SlowDownTimer" to="." method="_on_slow_down_timer_timeout"]
[connection signal="timeout" from="FreezeTimer" to="." method="_on_freeze_timer_timeout"]
[connection signal="timeout" from="ReverseTimer" to="." method="_on_reverse_timer_timeout"]
[connection signal="timeout" from="RapidFireTimer" to="." method="_on_rapid_fire_timer_timeout"]
[connection signal="timeout" from="MiniTimer" to="." method="_on_mini_timer_timeout"]
[connection signal="timeout" from="UltiTimer" to="." method="_on_ulti_timer_timeout"]
[connection signal="finished" from="Sound_Death" to="." method="_on_sound_death_finished"]
